--- a/static/styles/scss/blocks/header/header.scss
+++ b/static/styles/scss/blocks/header/header.scss
@@ -1,7 +1,13 @@
 .header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
     background-color: #000;
     height: 100px;
     line-height: 100px;
+    z-index: 100;
+    box-shadow: 0 1px 10px -2px rgba(0, 0, 0, 0.3);
     
     &__wrapper {
         display: flex;
@@ -22,7 +28,7 @@
 
     &__hamburger {
         display: none;
-        z-index: 10;
+        z-index: 100;
     }
 
     &__menu {
@@ -43,7 +49,7 @@
             align-items: center;
             margin-right: 0;
             transform: translateX(-100%);
-            z-index: 1;
+            z-index: 90;
             line-height: 1;
 
             &__item {
