--- a/static/styles/scss/main.scss
+++ b/static/styles/scss/main.scss
@@ -9,3 +9,5 @@
 @import 'blocks/home/home';
 @import 'blocks/features/features';
 @import 'blocks/shop/shop';
+@import 'blocks/collection/collection';
+@import 'blocks/designers/designers';
